--- a/SIRModeler.html
+++ b/SIRModeler.html
@@ -17,8 +17,13 @@ MathJax.Hub.Config({
        el.select();
       }
     </script>
-    <link rel="stylesheet" type="text/css" href="http://jsxgraph.uni-bayreuth.de/distrib/jsxgraph.css">
-    <script type="text/javascript" src="http://jsxgraph.uni-bayreuth.de/distrib/jsxgraphcore.js"></script>
+     <link rel="stylesheet" type="text/css" href="https://jsxgraph.uni-bayreuth.de/share/ext/bootstrap/bootstrap-5.1.1-individual.css">
+    <link rel="stylesheet" type="text/css" href="https://jsxgraph.uni-bayreuth.de/share/ext/fontawesome-free-5.15.4-web/css/all.css">
+    <link rel="stylesheet" type="text/css" href="https://jsxgraph.uni-bayreuth.de/distrib/jsxgraph.css">
+    <link rel="stylesheet" type="text/css" href="https://jsxgraph.uni-bayreuth.de/share/css/styles.css">
+   
+    <script src="https://jsxgraph.uni-bayreuth.de/share/js/_load_helpers.js" type="text/javascript"></script>
+    <script src="https://jsxgraph.uni-bayreuth.de/share/js/_load.js" type="text/javascript"></script>
   </head>
   <body>
 	<p>The SIR model is a simple mathematical description of the spread of a disease in a 
