--- a/SIRModeler.html
+++ b/SIRModeler.html
@@ -26,7 +26,7 @@ MathJax.Hub.Config({
     <script src="https://jsxgraph.uni-bayreuth.de/share/js/_load.js" type="text/javascript"></script>
   </head>
   <body>
-	<p>The SIR model is a simple mathematical description of the spread of a disease in a 
+	<p>The SIR model googoo is a simple mathematical description of the spread of a disease in a 
 population. This model divides the (fixed) population of $N$ individuals into three "compartments" which 
 may vary as a function of time, $t$:</p>
 <ul>
