--- a/SIRModeler.html
+++ b/SIRModeler.html
@@ -21,12 +21,13 @@ MathJax.Hub.Config({
     <link rel="stylesheet" type="text/css" href="https://jsxgraph.uni-bayreuth.de/share/ext/fontawesome-free-5.15.4-web/css/all.css">
     <link rel="stylesheet" type="text/css" href="https://jsxgraph.uni-bayreuth.de/distrib/jsxgraph.css">
     <link rel="stylesheet" type="text/css" href="https://jsxgraph.uni-bayreuth.de/share/css/styles.css">
-   
+
+    <script src="https://jsxgraph.uni-bayreuth.de/distrib/jsxgraphcore.js?v=1697665390" type="text/javascript"></script>
     <script src="https://jsxgraph.uni-bayreuth.de/share/js/_load_helpers.js" type="text/javascript"></script>
     <script src="https://jsxgraph.uni-bayreuth.de/share/js/_load.js" type="text/javascript"></script>
   </head>
   <body>
-	<p>The SIR model googoo is a simple mathematical description of the spread of a disease in a 
+	<p>The SIR model is a simple mathematical description of the spread of a disease in a 
 population. This model divides the (fixed) population of $N$ individuals into three "compartments" which 
 may vary as a function of time, $t$:</p>
 <ul>
