--- a/SIRModeler.html
+++ b/SIRModeler.html
@@ -22,7 +22,18 @@ MathJax.Hub.Config({
     <link rel="stylesheet" type="text/css" href="https://jsxgraph.uni-bayreuth.de/distrib/jsxgraph.css">
     <link rel="stylesheet" type="text/css" href="https://jsxgraph.uni-bayreuth.de/share/css/styles.css">
 
-    <script src="https://jsxgraph.uni-bayreuth.de/distrib/jsxgraphcore.js?v=1697665390" type="text/javascript"></script>
+    <script src="https://jsxgraph.uni-bayreuth.de/share/js/extend_externa/ecma.js" type="text/javascript"></script>
+
+    <script src="https://jsxgraph.uni-bayreuth.de/share/ext/jquery-3.6.0/jquery-3.6.0.js" type="text/javascript"></script>
+    <script src="https://jsxgraph.uni-bayreuth.de/share/js/extend_externa/jquery.js" type="text/javascript"></script>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.js" type="text/javascript"></script>
+    <script src="https://jsxgraph.uni-bayreuth.de/share/ext/bootstrap_extension/popper.min.js" type="text/javascript"></script>
+    <script src="https://jsxgraph.uni-bayreuth.de/share/ext/bootstrap/bootstrap-5.1.1.js" type="text/javascript"></script>
+
+            <script src="https://jsxgraph.uni-bayreuth.de/distrib/jsxgraphcore.js?v=1697664571" type="text/javascript"></script>
+    
+    <script src="https://jsxgraph.uni-bayreuth.de/share/js/extend_externa/bootstrap.js" type="text/javascript"></script>
     <script src="https://jsxgraph.uni-bayreuth.de/share/js/_load_helpers.js" type="text/javascript"></script>
     <script src="https://jsxgraph.uni-bayreuth.de/share/js/_load.js" type="text/javascript"></script>
   </head>
