--- a/explorer/download-3.0.html
+++ b/explorer/download-3.0.html
@@ -9,7 +9,8 @@
 }
 
 </style> </head>
-  <body style="   color: rgb(0, 0, 0); background-color: rgb(255, 255, 255);" vlink="#551a8b"
+  <body style="   color: rgb(0, 0, 0); background-color: rgb(255, 255, 255);" vlink="#551a8b"
+
     link="#0000ee" alink="#ff0000">
     <center>
       <h1><i>Geometry Explorer</i></h1>
@@ -81,7 +82,7 @@
       <ul>
         Installation <a href="InstallUnix3_0.html">Instructions </a>for
         installing on Other Platforms
-        <p>Download <a href="gex_unix_3_0.tar.gz">GEX_unix_3_0.tar.gz</a>
+        <p>Download <a href="GEX_unix_3_0.tar.gz">GEX_unix_3_0.tar.gz</a>
           (8/03/2015)&nbsp; (35.14 mb) <br>
         </p>
       </ul>
