--- a/explorer/download-3.0.html
+++ b/explorer/download-3.0.html
@@ -64,7 +64,7 @@
       version of Java from <a href="https://www.java.com/en/download/manual.jsp">https://www.java.com/en/download/manual.jsp</a>)<br>
       <br>
     </div>
-    <div style="margin-left: 80px;">Download <a href="GEX_macos_3_0.dmg">Geometry
+    <div style="margin-left: 80px;">Download <a href="gex_macos_3_0.dmg">Geometry
         Explorer</a> version 3.0 (8/03/2015) for Macintosh OS X&nbsp; (36.44 mb)
     </div>
     <div style="margin-left: 80px;"><br>
