--- a/explorer/download-3.0.html
+++ b/explorer/download-3.0.html
@@ -31,7 +31,8 @@
       above. CPU speed &gt;= 500 mhz, at least 140 mb of hard disk space (~60 mb
       for the installer and 74 mb for the program once installed), and 1 gb of
       RAM.&nbsp; A Java virtual machine (JVM) is required at the level of JDK
-      1.7 or above. (You can download the latest version of Java from <a href="https://www.java.com/en/download/manual.jsp">https://www.java.com/en/download/manual.jsp</a>)<br>
+      1.7 or above. (You can download the latest version of Java from 
+        <a href="https://www.java.com/en/download/">https://www.java.com/en/download/</a>)<br>
       <br>
       <ul>
         Download <a href="GEX_windows_3_0.exe">Geometry Explorer</a> version
@@ -45,7 +46,8 @@
       distribution and 74 mb for the program files once decompressed), and 1 gb
       of RAM.&nbsp; A<font size="+1"> </font>Java virtual machine (JVM) is
       required at the level of JDK1.7 or above. (You can download the latest
-      version of Java from <a href="https://www.java.com/en/download/manual.jsp">https://www.java.com/en/download/manual.jsp</a>).
+      version of Java from 
+      <a href="https://www.java.com/en/download/">https://www.java.com/en/download/</a>).
       Download the following file and install the program by typing "sh
       GEX_unix_3_0.sh" in a shell.&nbsp; After installation, you may need to
       change permissions on the executable (labeled "GeometryExplorer").&nbsp; <br>
@@ -61,11 +63,15 @@
       disk space (~36 mb for the compressed distribution and 74 mb for the
       program files once decompressed), and 1 gb of RAM. A Java virtual machine
       is required at the level of Java 8 or above. (You can download the latest
-      version of Java from <a href="https://www.java.com/en/download/manual.jsp">https://www.java.com/en/download/manual.jsp</a>)<br>
+      version of Java from <a href="https://www.java.com/en/download/">https://www.java.com/en/download/</a>)<br>
       <br>
     </div>
     <div style="margin-left: 80px;">Download <a href="gex_macos_3_0.dmg">Geometry
         Explorer</a> version 3.0 (8/03/2015) for Macintosh OS X&nbsp; (36.44 mb)
+      Once the installer file is downloaded, hold down the control key and click on the installer. 
+      Then, select Open from the shortcut menu. You may need to enter your admin name and password. 
+      The installer will be saved as an exception to your security settings, and you may open it again by double-clicking it,
+      if needed.
     </div>
     <div style="margin-left: 80px;"><br>
     </div>
