--- a/explorer/download-3.0.html
+++ b/explorer/download-3.0.html
@@ -22,9 +22,7 @@
       Geometry Explorer Version 3.0&nbsp; (Released 8/03/2015)&nbsp; To download
       any of these installer files, right click (ctrl or apple-click for one
       button mice) on the file and choose "Save Link As" to save the installer
-      file to your computer. Then, on Macintosh and Windows machines,
-      double-click the installer file to run the installation program.&nbsp; On
-      Linux machines follow the instructions below. <br>
+      file to your computer. Then, follow the instructions below. <br>
     </p>
     <ul>
       <u>Windows</u>:&nbsp; Minimum Required configuration:&nbsp; Windows 7 or
@@ -69,7 +67,8 @@
     <div style="margin-left: 80px;">Download <a href="gex_macos_3_0.dmg">Geometry
         Explorer</a> version 3.0 (8/03/2015) for Macintosh OS X&nbsp; (36.44 mb)
       Once the installer file is downloaded, hold down the control key and click on the installer. 
-      Then, select Open from the shortcut menu. You may need to enter your admin name and password. 
+      Then, select Open from the shortcut menu. (You may need to do this step twice)
+      You also may need to enter your admin name and password. 
       The installer will be saved as an exception to your security settings, and you may open it again by double-clicking it,
       if needed.
     </div>
