--- a/explorer/download-3.0.html
+++ b/explorer/download-3.0.html
@@ -94,7 +94,8 @@
     </ul>
     <div style="margin-left: 40px;"><span style="text-decoration: underline;">Documentation</span>:
       <a href="guideVer2.pdf">A PDF version of the Geometry Explorer User Guide</a></div>
-    <ul>
+    <ul> All installers were built using Install4J's great installer tool.  This tool is a 
+      <a href="https://www.ej-technologies.com/install4j">Multi-Platform Installer Builder. </a> 
     </ul>
   </body>
 </html>
