--- a/TransformGame.html
+++ b/TransformGame.html
@@ -16,7 +16,7 @@
       "HTML-CSS":{availableFonts:["STIX", "TeX"], preferredFont: "STIX"}
     });
     </script>
-    <link rel="stylesheet" type="text/css" href="http://jsxgraph.uni-bayreuth.de/distrib/jsxgraph.css">
+    <link rel="stylesheet" type="text/css" href="./style/jsxgraph.css">
     <script type="text/javascript" src="./js/jsxgraphcore.js"></script>
     <script type="text/javascript" 
         src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
