--- a/TransformGame.html
+++ b/TransformGame.html
@@ -2,20 +2,8 @@
 <html>
   <head>
     <title>Help Geo Get Home</title>
-    <script type="text/javascript"
-  src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
-</script>
-    MathJax.Hub.Config({
-      config: ["MMLorHTML.js"],
-      jax: ["input/TeX","input/MathML","output/HTML-CSS","output/NativeMML"],
-      extensions: ["tex2jax.js","mml2jax.js","MathMenu.js","MathZoom.js"],
-      TeX: {
-        extensions: ["AMSmath.js","AMSsymbols.js","noErrors.js","noUndefined.js"]
-      },
-      tex2jax: {inlineMath: [["$","$"],["\\(","\\)"]]},
-      "HTML-CSS":{availableFonts:["STIX", "TeX"], preferredFont: "STIX"}
-    });
-    </script>
+    <script type="text/javascript" id="MathJax-script" async
+  src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml.js"></script>
     <link rel="stylesheet" type="text/css" href="./style/jsxgraph.css">
     <script type="text/javascript" src="./js/jsxgraphcore.js"></script>
     <script type="text/javascript" 
