--- a/TransformGame.html
+++ b/TransformGame.html
@@ -2,8 +2,19 @@
 <html>
   <head>
     <title>Help Geo Get Home</title>
-    <script type="text/javascript" id="MathJax-script" async
-  src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml.js"></script>
+  <script>
+    MathJax = {
+    tex: {
+      inlineMath: [['$', '$'], ['\\(', '\\)']]
+    },
+    svg: {
+      fontCache: 'global'
+    }
+  };
+</script>
+<script type="text/javascript" id="MathJax-script" async
+  src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-svg.js">
+</script>
     <link rel="stylesheet" type="text/css" href="./style/jsxgraph.css">
     <script type="text/javascript" src="./js/jsxgraphcore.js"></script>
     <script type="text/javascript" 
